@@ -717,6 +717,9 @@ void nsh_usbtrace(void);
 #  ifndef CONFIG_NSH_DISABLE_LS
       int cmd_ls(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
 #  endif
+#  ifndef CONFIG_NSH_DISABLE_MKDIR
+      int cmd_mkdir(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
+#  endif
 #  ifndef CONFIG_NSH_DISABLE_RMDIR
       int cmd_rmdir(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
 #  endif
@@ -746,9 +749,6 @@ void nsh_usbtrace(void);
          int cmd_umount(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
 #     endif
 #     ifdef CONFIG_FS_WRITABLE
-#       ifndef CONFIG_NSH_DISABLE_MKDIR
-           int cmd_mkdir(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
-#       endif
 #       ifndef CONFIG_NSH_DISABLE_MKRD
            int cmd_mkrd(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
 #       endif
